# python_siem

./: .gitignore  Dockerfile  README.md  complete_siem_package.sh  config.json  legacy_python_siem_system.py  pyproject.toml  python_siem_system.py  requirements.txt  run.py
.github/workflows/: python-tests.yml  release.yml
examples/: webhook_receiver.py
logs/: failed_webhooks.db  failed_webhooks.jsonl
scripts/: init_failed_webhooks_db.py
siem/: __init__.py  alerts.py  cli.py  config.py  dead_letter.py  dead_letter_admin.py  ingest.py  parse.py  queue.py  replay.py  rules.py
tests/: test_alerts.py  test_alerts_binary_signature.py  test_alerts_retry.py  test_alerts_signature.py  test_alerts_webhook.py  test_cli.py  test_config.py  test_dead_letter_admin.py  test_parse.py  test_parse_malformed.py  test_replay_queue.py  test_rules.py
tools/: test_parse.py
